Fix z-index issue with Moodle menus

--- a/styles/ableplayer.css
+++ b/styles/ableplayer.css
@@ -35,6 +35,7 @@
 */
 .able-wrapper {
   position: relative;
+  z-index: 0;
   margin: 1em 0;
   padding: 0;
   max-width: 100%;
